# course-tracker

./: .gitignore  README.md  asset-manifest.json  course-tracker.code-workspace  ideas.txt  index.html
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  NotWorkingCMakePresets.json  README.md  courses.json  myThoughts  myThoughts.txt
backend/app/: __init__.py  models.py
backend/app/auth/: auth.py
backend/app/courses/: __init__.py  view.py
backend/app/routes/: __init__.py  base_route.py  courses.py
backend/data/: courseData.json  userData.json
backend/include/: assignment.h  course.h
backend/include/routes/: mainRoutes.h
backend/src/: assignment.cpp  course.cpp  main.cpp
backend/src/routes/: mainRoutes.cpp
backend/tests/: test_assignment.cpp  test_course.cpp  test_routes.py
frontend/: .gitignore  README.md  package-lock.json  package.json  planning.txt
frontend/src/: App.css  App.js  App.tsx  index.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: auth.tsx  courseCard.tsx  dropdownMenu.tsx  layout.js  logoLink.css  logoLink.js  mainButtonWrapper.tsx  navbar.css  navbar.js  navbar.tsx  navigationButton.tsx
frontend/src/components/navbar/: navbar.tsx
frontend/src/pages/course/: course.css  course.tsx
frontend/src/pages/dashboard/: dashboard.css  dashboard.tsx
frontend/src/pages/home/: home.css  home.tsx
static/css/: main.4e21482b.css  main.4e21482b.css.map  main.e77a3f79.css  main.e77a3f79.css.map
static/js/: main.0414930a.js  main.0414930a.js.map  main.0eb67ca3.js  main.0eb67ca3.js.map
